# beef

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: clippy.yaml  format.yaml  tests.yaml
benches/: bench.rs
ci/: miri.sh
src/: cfg_const_deref.rs  cfg_fix.rs  error.rs  fat.rs  generic.rs  lean.rs  lib.rs  serde.rs  skinny.rs  traits.rs  wide.rs
