[package]
name = "beef"
version = "0.4.0"
authors = ["Maciej Hirsz <hello@maciej.codes>"]
edition = "2018"
description = "More compact Cow"
repository = "https://github.com/maciejhirsz/beef"
documentation = "https://docs.rs/json/"
license = "MIT/Apache-2.0"
readme = "./README.md"
keywords = ["cow", "borrow", "str", "slice"]
categories = ["no-std", "memory-management"]

[dependencies]
serde = { version = "1.0.105", default-features = false, features = ["alloc"], optional = true }

[dev-dependencies]
serde_derive = "1.0.105"
serde_json = "1.0"

[features]
default = []

# adds `Cow::const_str` and `Cow::const_slice`, which are const fn
# alternatives for creating &str and &[T] borrows
# requires nightly: https://github.com/rust-lang/rust/issues/57563
const_fn = []

impl_serde = ["serde"]

[profile.bench]
opt-level = 3
debug = false
lto = 'fat'
debug-assertions = false
codegen-units = 1